# natsmd

./: CMakeLists.txt
.copr/: Makefile
golang/: Makefile  nats-sub.go
src/: ev_nats.cpp
